chore: fixed dark mode cards

--- a/src/components/Dashboard/Cards.scss
+++ b/src/components/Dashboard/Cards.scss
@@ -13,6 +13,7 @@
     bottom: 20px;
     z-index: 9;
     font-weight: bold;
+    padding-right: 15px;
   }
 
   .background-blur {
